samples/SEMANTIC_ERROR/test_program.php
<?php
declare(strict_types=1);
pp(7);
$TRUE = 1;
if(1 + 2)
{
    while($TRUE)
    {
        foo(1,2.6,3);
    }
    return(1);
}
return(3);
return(1);

function foo(int $a, float $b, int $c) : void
{
    if( $x===1)
    {
        return;
    }
}

function pp(int $a) : void
{
}

function bb() : string
{
    return "all" ;
}

return(42);

?>